1, Add info/class.txt, info/item.txt files and translation; 2, Add "Count" textbox in the ChoiceWindow for faster item append (combined AppendItem as one function);

--- a/UnicornOverlord/UnicornOverlord.csproj
+++ b/UnicornOverlord/UnicornOverlord.csproj
@@ -17,6 +17,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="info\class.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="info\item.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
