Add Excel Support

--- a/UnicornOverlord/UnicornOverlord.csproj
+++ b/UnicornOverlord/UnicornOverlord.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="7.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Settings.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <AutoGen>True</AutoGen>
@@ -17,10 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="info\class.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="info\item.txt">
+    <None Update="info\Data.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Properties\Settings.settings">
